# ledger-vara

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  speculos.yml
ansible/: install-speculos.yml  server-block.j2  speculos.service.j2  update-apps.yml
ansible/html/: index.html
assets/: app_nanos.json  app_nanosplus.json  app_nanox.json  build.sh
docs/: adpu.md
src/: apdu.rs  app.rs  error.rs  get_public_key.rs  macos_lib.rs  main.rs  menu.rs  settings.rs  signer.rs  transcript.rs  utils.rs
src/menu/: page.rs
test/: kusama_get_addr.hex  polkadot_get_addr.hex  polkadot_get_version.hex  polkadot_sign.hex  run-tests.sh  test_cmds.py  vara_get_pub_key.hex  vara_get_pub_key_interactive.hex  vara_sign.hex
