[package]
name = "app-vara"
version = "0.0.1"
authors = ["Gear Foundation"]
edition = "2021"

[dependencies]
include_gif = { git = "https://github.com/LedgerHQ/sdk_include_gif" }
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" }

[profile.release]
opt-level = 'z'
lto = true

[features]
pending_review_screen = ["nanos_sdk/pending_review_screen"]
speculos = ["nanos_sdk/speculos", "nanos_ui/speculos"]

[package.metadata.ledger]
name = "Vara"
curve = ["ed25519"]
flags = "0"
path = ["44'/913'"]
api_level = "1"

[package.metadata.ledger.nanos]
icon = "assets/icon_s.gif"

[package.metadata.ledger.nanosplus]
icon = "assets/icon_x.gif"

[package.metadata.ledger.nanox]
icon = "assets/icon_x.gif"
