[package]
name = "app-vara"
version = "0.0.2"
authors = ["Gear Foundation"]
edition = "2021"

[dependencies]
hex = { version = "0.4", default-features = false }
include_gif = "1.0.1"
ledger_device_sdk = "1.1.0"
merlin = { version = "3.0", default-features=false }
rand_core = "0.6"
schnorrkel = { version = "0.11", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[features]
pending_review_screen = ["ledger_device_sdk/pending_review_screen"]
speculos = ["ledger_device_sdk/speculos"]

[package.metadata.ledger]
name = "Vara"
curve = ["ed25519"]
flags = "0"
path = ["44'/913'"]
api_level = "1"

[package.metadata.ledger.nanos]
icon = "assets/icon_s.gif"

[package.metadata.ledger.nanosplus]
icon = "assets/icon_x.gif"

[package.metadata.ledger.nanox]
icon = "assets/icon_x.gif"
